appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTime::OpenModal::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true

- waitForAnimationToEnd

- runFlow:
    when:
      true: ${output.isTime == false}
    commands:
      - tapOn:
          id: "RecipeTime::ManuallyFill::RoundButton"
          label: "Tap on button to enter time manually"
      - tapOn:
          id: "RecipeTime::NumericTextInput"
          label: "Tap on text input of the time to prepare"
      - runFlow:
          file: "../../../../waitForKeyboard.yaml"
          label: "Wait for numeric keyboard to appear"
      - runFlow:
          file: "../../../../replaceAndDone.yaml"
          env:
            TARGET_ID: "RecipeTime::NumericTextInput"
            VALUE: "30"
          label: "Enter the time to prepare this recipe"
      - runFlow:
          file: "../../../../waitForKeyboardDismiss.yaml"
          label: "Wait for numeric keyboard to dismiss"

- runFlow:
    when:
      true: ${output.isTime == true}
    commands:
      - tapOn:
          id: "RecipeTime::OpenModal::RoundButton"
          label: "Tap on button to OCR time to prepare"
      - runFlow:
          file: ../android/addMedia.yaml
          env:
            FIELD_NAME: personsAndTime
          when:
            platform: Android
      - runFlow:
          file: ../iOS/addMedia.yaml
          env:
            FIELD_NAME: personsAndTime
          when:
            platform: iOS
      - runFlow:
          file: ../android/selectMostRecentFromModal.yaml
          label: "Select time from modal for OCR"
          when:
            platform: Android
      - runFlow:
          file: ../iOS/selectMostRecentFromModal.yaml
          label: "Select time from modal for OCR"
          when:
            platform: iOS
      - extendedWaitUntil:
          visible:
            id: "RecipeTime::NumericTextInput"
          timeout: 30000
          label: "Wait for time to be populated by OCR"
      - runFlow:
          file: ../cleanAndResume.yaml
          label: "Delete time image from gallery and return to Recipedia"
