appId: "com.recipedia"
---
- extendedWaitUntil:
    visible:
      text: "aspectratio.fill"
    timeout: 30000
    label: "Wait for aspect ratio menu"

- tapOn:
    text: "aspectratio.fill"
    retryTapIfNoChange: true
    label: "Open aspect ratio menu"

- extendedWaitUntil:
    visible:
      text: "Original"
    timeout: 1000
    label: "Wait for original aspect ratio"

- waitForAnimationToEnd:
    label: "Wait for aspect ratio animation to end"

- tapOn:
    text: "Original"
    retryTapIfNoChange: true
    label: "Select original aspect ratio to show full image"

- extendedWaitUntil:
    notVisible:
      text: "Original"
    timeout: 10000
    label: "Wait for original aspect ratio to be hidden"

- waitForAnimationToEnd:
    label: "Wait for aspect ratio animation to end"
