appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeIngredients::8::DeleteButton"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to ingredient to delete"

- tapOn:
    id: "RecipeIngredients::8::DeleteButton"
    label: "Delete the 'conserve' line as it is not an ingredient to keep"

- extendedWaitUntil:
    notVisible: "RecipeIngredients::11::.*"
    timeout: 5000
    label: "Wait for ingredient to be deleted"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::0::QuantityInput"
    direction: UP
    speed: 20
    centerElement: true
    label: "Scroll back to top of ingredients"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "0"
      VALUE: "2"
    label: "Fill Carotte quantity: 2"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "1"
      VALUE: "2"
    label: "Fill Citronnelle quantity: 2"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "2"
      VALUE: "2"
    label: "Fill Cébette quantity: 2"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "3"
      VALUE: "2"
    label: "Fill Gousse d'ail quantity: 2"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "4"
      VALUE: "400"
    label: "Fill Lait de coco quantity: 400"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "5"
      VALUE: "2"
    label: "Fill Oignon jaune quantity: 2"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "6"
      VALUE: "2"
    label: "Fill Poireau quantity: 2"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "7"
      VALUE: "200"
    label: "Fill Pois chiches quantity: 200"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "8"
      VALUE: "250"
    label: "Fill Purée de tomates quantity: 250"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "9"
      VALUE: "300"
    label: "Fill Riz basmati quantity: 300"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "10"
      VALUE: "2"
    label: "Fill Épices Cachemire quantity: 2"
