appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePersons::NumericTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to persons field"

- waitForAnimationToEnd:
    label: "Wait for UI to stabilize"

- tapOn:
    id: "RecipePersons::NumericTextInput"
    label: "Focus on persons input"

- runFlow:
    file: "../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- runFlow:
    file: "../../replaceAndDone.yaml"
    env:
      TARGET_ID: "RecipePersons::NumericTextInput"
      VALUE: "${PERSONS}"
    label: "Replace the default number of persons with ${PERSONS}"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- assertVisible:
    id: "RecipePersons::NumericTextInput"
    text: "${PERSONS}"
    label: "Check that the number of persons is displayed correctly"
