appId: "com.recipedia"
---

- scrollUntilVisible:
    element:
      id: "RecipeTitle::CustomTextInput"
    direction: DOWN
    speed: 10
    centerElement: true
    label: "Center title input before focus"

- tapOn:
    id: "RecipeTitle::CustomTextInput"
    label: "Focus on recipe title input"

- runFlow:
    file: "../../replaceAndDone.yaml"
    env:
      TARGET_ID: "RecipeTitle::CustomTextInput"
      VALUE: "${TITLE}"
    label: "Replace the recipe title with ${TITLE}"

- assertVisible:
    id: "RecipeTitle::CustomTextInput"
    text: "${TITLE}"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to disappear"
